# AnimeGAN

./: .gitignore  Dockerfile  README.md  pyproject.toml
AnimeGAN/: __main__.py  main.py
AnimeGAN/dataset/prepare_video/: README.md  prepare_images.py
AnimeGAN/dataset/video/: prepare_images.py
AnimeGAN/datasets/prepare_video/: README.md  prepare_images.py
AnimeGAN/telegram/database/: constants.py  core.py  entities.py
AnimeGAN/telegram/datasphere/: Model.py  example.ipynb  request.py
AnimeGAN/telegram/datasphere/util/: iam.py
AnimeGAN/telegram/tg_bot/: bot.py  common.py  procvid.py  requirements.txt  tg_bot_ver0.py  utils.py
datasets/: dataset.txt  humdata.txt
nmodel/models/: anime_gan.py  conv_blocks.py
