[tool.poetry]
name = "animegan"
version = "0.1.0"
description = ""
authors = ["Maxim <max.sherb2007@gmail.com>", "Vlad <ogloblinvlad6@gmail.com>", "Andrey <Andrey7Klimin@yandex.ru>", "Andrey <paiflare@gmail.com>", "Yaroslav <blanla12345@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
